--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <div class="onder">
 			<div class="kies-nummer">
                 <p>Vul een nummer in</p>
-				<input class="input" type="number" value="" />
+				<input class="input" type="number" value="" onfocus="this.value=''" />
 
-				<button class="check">Check</button>
+				<button id="check">Check</button>
 			</div>
 
 			<div class="score-card">
@@ -36,7 +36,7 @@
                 <div class="score">
                     <p>Highscore:</p>
                     <p>0</p>
-                </div>
+                </div>class
             </div>
             </div>
 		</main>
