Game af alleen nog opmaak

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 </div>
                 <div class="score">
                     <p>Highscore:</p>
-                    <p>0</p>
-                </div>class
+                    <p class="Highscore">0</p>
+                </div>
             </div>
             </div>
 		</main>
