--- a/index.html
+++ b/index.html
@@ -12,34 +12,37 @@
 	</head>
 	<body>
 		<main>
-			<button class="reset">Opniew</button>
-
-			<h1>Raad het geheime nummer</h1>
 			<div>
 				<p class="secretNum">?</p>
 			</div>
+			<h1>Raad het geheime nummer onder de 20</h1>
 
+			<div class="onder">
+				<div class="kies-nummer">
+					<p>Vul een nummer in</p>
+					<input
+						class="input"
+						type="number"
+						value=""
+						onfocus="this.value=''"
+					/>
 
-            <div class="onder">
-			<div class="kies-nummer">
-                <p>Vul een nummer in</p>
-				<input class="input" type="number" value="" onfocus="this.value=''" />
+					<button id="check">Check</button>
+				</div>
 
-				<button id="check">Check</button>
+				<div class="score-card">
+					<div class="score">
+						<p>Score:</p>
+						<p class="jeScore">20</p>
+					</div>
+					<div class="score2">
+						<p>Highscore:</p>
+						<p class="Highscore">0</p>
+					</div>
+				</div>
 			</div>
-
-			<div class="score-card">
-                <div class="score">
-                    <p>Score:</p>
-                    <p class="jeScore">20</p>
-                </div>
-                <div class="score">
-                    <p>Highscore:</p>
-                    <p class="Highscore">0</p>
-                </div>
-            </div>
-            </div>
+			<button class="reset">Opniew</button>
 		</main>
-        <script src="/game.js"></script>
+		<script src="/game.js"></script>
 	</body>
 </html>
